--- a/Backend/pavuk/src/main/resources/application.properties
+++ b/Backend/pavuk/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=pavuk
+
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/pavuk
+spring.datasource.username=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+spring.jpa.properties.hibernate.format_sql=true
