--- a/Backend/pavuk/src/main/resources/application.properties
+++ b/Backend/pavuk/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=pavuk
 
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/pavuk
-spring.datasource.username=root
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 spring.jpa.properties.hibernate.format_sql=true
