--- a/Backend/pavuk/src/main/resources/application.properties
+++ b/Backend/pavuk/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=pavuk
 
+spring.security.user.name=admin
+spring.security.user.password=admin
+
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -15,3 +18,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-alias=local_ssl
+server.ssl.key-store=server/certs/local-ssl.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-password=123456
+server.ssl.key-store-password=123456
